--- a/sm_matrix_archive/CMakeLists.txt
+++ b/sm_matrix_archive/CMakeLists.txt
@@ -6,7 +6,7 @@ catkin_simple()
 
 find_package(Boost REQUIRED COMPONENTS system filesystem)
 
-add_definitions(-std=c++0x -D__STRICT_ANSI__)
+add_definitions(-std=c++17 -D__STRICT_ANSI__)
 
 include_directories(include ${Boost_INCLUDE_DIRS})
 
