--- a/sm_kinematics/CMakeLists.txt
+++ b/sm_kinematics/CMakeLists.txt
@@ -6,7 +6,9 @@ catkin_simple()
 
 find_package(Boost REQUIRED COMPONENTS system serialization filesystem)
 
-add_definitions(-Wall -std=c++0x)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
+# add_definitions(-Wall -std=c++0x)
 include_directories(include ${Boost_INCLUDE_DIRS})
 
 ##############
