--- a/sm_opencv/CMakeLists.txt
+++ b/sm_opencv/CMakeLists.txt
@@ -6,7 +6,7 @@ catkin_simple()
 
 find_package(Boost REQUIRED COMPONENTS system)
 
-add_definitions(-std=c++0x -D__STRICT_ANSI__)
+add_definitions(-std=c++17 -D__STRICT_ANSI__)
 
 include_directories(${Boost_INCLUDE_DIRS})
 
