--- a/sm_kinematics/CMakeLists.txt
+++ b/sm_kinematics/CMakeLists.txt
@@ -5,11 +5,12 @@ find_package(catkin_simple REQUIRED)
 catkin_simple()
 
 find_package(Boost REQUIRED COMPONENTS system serialization filesystem)
+find_package(Eigen3 REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
 # add_definitions(-Wall -std=c++0x)
-include_directories(include ${Boost_INCLUDE_DIRS})
+include_directories(include ${Boost_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
 
 ##############
 ## Building ##
