--- a/sm_eigen/CMakeLists.txt
+++ b/sm_eigen/CMakeLists.txt
@@ -1,42 +1,75 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(sm_eigen)
 
-find_package(catkin_simple REQUIRED)
-catkin_simple()
-
+# Use Ament
+find_package(ament_cmake REQUIRED)
 find_package(Boost REQUIRED COMPONENTS system serialization)
 find_package(Eigen3 REQUIRED)
+find_package(sm_random REQUIRED)
+find_package(sm_common REQUIRED)
 
-include_directories(${Boost_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
-
-##############
+##################
 ## Building ##
-##############
+##################
 
-cs_add_library(${PROJECT_NAME}
+add_library(${PROJECT_NAME} SHARED
   src/random.cpp
 )
 
-target_link_libraries(${PROJECT_NAME} 
-                      ${Boost_LIBRARIES})
+# Link dependencies
+target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
 
-#############
-## Testing ##
-#############
-# Avoid clash with tr1::tuple: https://code.google.com/p/googletest/source/browse/trunk/README?r=589#257
-add_definitions(-DGTEST_USE_OWN_TR1_TUPLE=0)
-
-## Add gtest based cpp test target and link libraries
-catkin_add_gtest(${PROJECT_NAME}-test 
-  test/test_main.cpp
-  test/EigenSerializationTests.cpp
-  test/MatrixSqrtTest.cpp
+# Set dependencies for the target
+ament_target_dependencies(${PROJECT_NAME} Boost Eigen3 sm_random sm_common)
+target_include_directories(${PROJECT_NAME} PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+  ${EIGEN3_INCLUDE_DIRS}
+  ${Boost_INCLUDE_DIRS}
 )
-if(TARGET ${PROJECT_NAME}-test)
-  target_link_libraries(${PROJECT_NAME}-test 
-    ${PROJECT_NAME}
+
+# Export dependencies
+ament_export_dependencies(Boost Eigen3 sm_random sm_common)
+ament_export_include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+ament_export_libraries(${PROJECT_NAME})
+
+##################
+## Testing ##
+##################
+
+if(BUILD_TESTING)
+  find_package(ament_cmake_gtest REQUIRED)
+
+  # Avoid clash with tr1::tuple
+  add_definitions(-DGTEST_USE_OWN_TR1_TUPLE=0)
+
+  ament_add_gtest(${PROJECT_NAME}-test 
+    test/test_main.cpp
+    test/EigenSerializationTests.cpp
+    test/MatrixSqrtTest.cpp
   )
+
+  if(TARGET ${PROJECT_NAME}-test)
+    target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
+  endif()
 endif()
 
-cs_install()
-cs_export(LIBRARIES ${Boost_LIBRARIES})
+##################
+## Installation ##
+##################
+
+# Install library
+install(
+  TARGETS ${PROJECT_NAME}
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+)
+
+# Install include files
+install(DIRECTORY include/
+  DESTINATION include
+)
+
+# Finalize package
+ament_package()
