--- a/sm_boost/package.xml
+++ b/sm_boost/package.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>sm_boost</name>
   <version>0.0.1</version>
   <description>sm_boost</description>
 
   <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
-  <license>New BSD</license>
-  <buildtool_depend>catkin</buildtool_depend>
-  <buildtool_depend>catkin_simple</buildtool_depend>
-  
+  <license>BSD-3-Clause</license>
+
+  <!-- Build Tool -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <!-- Build Dependencies -->
   <build_depend>sm_common</build_depend>
-  <run_depend>sm_common</run_depend>
-  <test_depend>gtest</test_depend>
+
+  <!-- Execution Dependencies -->
+  <exec_depend>sm_common</exec_depend>
+
+  <!-- Testing Dependencies -->
+  <test_depend>ament_cmake_gtest</test_depend>
+
+  <!-- Export Build Type -->
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
